# wagtail-visual-themes

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: editor-guide.md
src/wagtail_themes/: __init__.py  apps.py  color_utils.py  constants.py  context_processors.py  css_emitter.py  models.py  panels.py  resolver.py  settings.py  viewsets.py  wagtail_hooks.py  widgets.py
src/wagtail_themes/management/commands/: wagtail_themes_setup_groups.py
src/wagtail_themes/migrations/: 0001_initial.py  0002_alter_theme_options.py  0003_alter_brandcolor_color_value_and_more.py
src/wagtail_themes/static/wagtail_themes/css/: admin.css  brand_color_chooser.css  color_picker.css  switcher.css
src/wagtail_themes/static/wagtail_themes/js/: brand_color_chooser.js  color_picker.js  switcher.js
src/wagtail_themes/templates/wagtail_themes/: no_flash.html  switcher.html
src/wagtail_themes/templates/wagtail_themes/preview/: brand_color_preview.html  theme_preview.html
src/wagtail_themes/templates/wagtail_themes/widgets/: brand_color_chooser.html  color_picker.html  color_preview_select.html
src/wagtail_themes/templatetags/: wagtail_themes.py
tests/: conftest.py  settings.py  test_color_picker.py  test_color_utils.py  test_icons.py  test_models.py  test_new_tokens.py  test_permissions.py  test_resolver.py  test_shades.py  test_template_tags.py  urls.py
tests/app/: apps.py  models.py
tests/app/migrations/: 0001_initial.py
