[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wagtail-themes"
version = "0.1.0"
description = "Reusable visual themes (colors, dark/light mode, radii, shadows, typography) for Wagtail pages."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Ievgenii Svyryd" }]
keywords = ["wagtail", "django", "themes", "design-tokens", "dark-mode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 6",
    "Framework :: Wagtail :: 7",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "Django>=4.2",
    "wagtail>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "django-stubs[compatible-mypy]>=5.0",
]

[project.urls]
Homepage = "https://github.com/ujeenet/wagtail-themes"
Documentation = "https://github.com/ujeenet/wagtail-themes#readme"
Repository = "https://github.com/ujeenet/wagtail-themes"
Issues = "https://github.com/ujeenet/wagtail-themes/issues"
Changelog = "https://github.com/ujeenet/wagtail-themes/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/wagtail_themes"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE", "/CHANGELOG.md"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "tests.py"]
addopts = "--strict-markers"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main"]
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "tests.settings"
